...
 tabBarIcon: ({ color, size }: TabIconProps) => <Ionicons color={color} name="flash-outline" size={size} />
 }}
 />
 <Tabs.Screen
 name="properties"
 options={{
 title: "Properties",
 tabBarIcon: ({ color, size }: TabIconProps) => <Ionicons color={color} name="home-outline" size={size} />
 }}
 />
 <Tabs.Screen
 name="contacts"
 options={{
...
